Экспорт/импорт описания автомата в файл amx (xml по структуре) Добавлен класс MachineDescription для сериализации/десериализации описания автомата и для создания модели автомата

--- a/AbstractMachineControl/Properties/Resources.resx
+++ b/AbstractMachineControl/Properties/Resources.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="dialogFilter" xml:space="preserve">
-    <value>"Файлы описаний машин (*.am)|*.am|Все файлы|*.*"</value>
+    <value>"Файлы описаний машин (*.amx)|*.amx|Все файлы|*.*"</value>
     <comment>Строка фильтра для диалогов открытия и сохранения файлов</comment>
   </data>
 </root>
